# WebCrawler

./: README.md  data.ts  main.py  pyproject.toml
api/: router.py  websocket.py
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  index.css
client/src/components/: Error.tsx  FailedLinks.tsx  Header.tsx  History.tsx  Loading.tsx  NodeDetailsPanel.tsx  Outgoing.tsx  TreeArea.tsx  TreeBranch.tsx  TreeNodeCard.tsx  TreeView.tsx
client/src/context/: DataContext.tsx
client/src/hooks/: useNode.ts
client/src/pages/: Home.tsx  WebsiteContent.tsx
client/src/types/: crawler.ts
client/src/utils/: layout.ts  toTree.ts  transformGraph.ts  treeUtils.ts  utiles.tsx
db/: mongodb.py
services/: crawler.py  failed_links.py  parser.py  scraper.py
test/: page1.html  page10.html  page11.html  page12.html  page13.html  page14.html  page15.html  page16.html  page17.html  page18.html  page19.html  page2.html  page20.html  page21.html  page22.html  page23.html  page24.html  page25.html  page26.html  page27.html  page28.html  page29.html  page3.html  page30.html  page31.html  page32.html  page33.html  page34.html  page35.html  page36.html  page37.html  page38.html  page39.html  page4.html  page40.html  page41.html  page42.html  page43.html  page44.html  page45.html  (+20 more)
