[project]
name = "web crawler"
version = "0.1.0"
description = ""
authors = [
    {name = "bebofcds",email = "bebo.boby3@gmail.com"}
]
requires-python = "3.12.3"
dependencies = [
    "fastapi (0.135.3)",
    "uvicorn (0.44.0)",
    "pymongo (4.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
