[project]
name = "web_crawler"
version = "0.1.0"
description = ""
authors = [
    {name = "bebofcds",email = "bebo.boby3@gmail.com"}
]
requires-python = ">=3.12.3"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn==0.44.0",
    "motor==3.7.1",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
